<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name" translatable="false">4o中转</string>
    <string name="activity_title" translatable="false">模式列表</string>
    <string name="notification_title" translatable="false">模式: %1$s</string>
    <string name="notification_message" translatable="false">点击停止运行</string>
    <string name="notification_button_toggle_menu" translatable="false">显示/隐藏</string>
    <string name="notification_button_stop" translatable="false">停止</string>
    <string name="accessibility_service_description" translatable="false">该应用需要无障碍服务来实现自动点击。
        一旦条件被检测到，便会执行由您创建的，位于其他应用上的点击列表。</string>
    <string name="dialog_title_add_scenario" translatable="false">新建事件</string>
    <string name="menu_item_title_select_all" translatable="false">全选</string>
    <string name="menu_item_title_privacy" translatable="false">隐私设置</string>
    <string name="menu_item_title_remove_ads" translatable="false">删除广告</string>
    <string name="menu_item_title_troubleshooting" translatable="false">故障排除</string>
    <string name="menu_item_title_cancel" translatable="false">取消</string>
    <string name="menu_item_title_search" translatable="false">搜索</string>
    <string name="item_desc_dumb_scenario" translatable="false">自动点击。\n只需在屏幕上点击即可。</string>
    <string name="item_desc_dumb_scenario_max_duration" translatable="false">在 %1$s 后停止</string>
    <string name="item_desc_dumb_scenario_max_duration_infinite" translatable="false">无最长持续时间</string>
    <string name="item_desc_dumb_scenario_repeat_count" translatable="false">重复 %1$d 次</string>
    <string name="item_desc_dumb_scenario_repeat_infinite" translatable="false">无限重复</string>
    <string name="item_desc_smart_scenario" translatable="false">使用图像检测创建复杂的用例\n包含付费限制。</string>
    <string name="item_desc_smart_scenario_pro_mode" translatable="false">使用图像检测创建复杂的用例</string>
    <string name="item_title_dumb_scenario" translatable="false">坐标定位</string>
    <string name="item_title_smart_scenario" translatable="false">图形检测</string>
    <string name="message_empty_scenario_list" translatable="false">请创建</string>
    <string name="message_delete_scenario" translatable="false">是否删除场景： %1$s ？</string>
    <string name="message_error_screen_capture_permission_dialog_not_found" translatable="false">您的设备不提供标准的 Android 屏幕捕获权限对话框。 将无法在其上运行。</string>
    <string name="section_title_scenario_type_title" translatable="false">情景类型</string>
    <string name="toast_denied_screen_sharing_permission" translatable="false">用户拒绝屏幕共享权限</string>
    <string name="toast_denied_foreground_permission" translatable="false">用户拒绝前台服务权限</string>
    <string name="button_text_create_scenario" translatable="false">创建场景</string>
    <string name="button_onekey_create_scenario" translatable="false">一键创建</string>
    <string name="content_desc_add_scenario" translatable="false">创建一个新场景</string>
    <string name="default_scenario_name" translatable="false">默认名称</string>
    <string name="message_empty_image_events_scenario_list" translatable="false">No image events</string>
    <string name="menu_item_title_export" translatable="false">导出</string>
    <string name="menu_item_title_import" translatable="false">导入</string>
    <string name="notification_channel_name" translatable="false">4O中转</string>

</resources>