<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ScenarioActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        style="@style/AppTheme.Widget.AppBarLayout"
        app:liftOnScroll="true"
        app:liftOnScrollTargetViewId="@id/list">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/AppTheme.Widget.Toolbar"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:menu="@menu/menu_scenario_fragment"
            app:title="@string/activity_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/empty_lottie_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toTopOf="@id/empty_text_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/lottie_empty" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/empty_text_title"
            style="@style/AppTheme.TextAppearance.EmptyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_default"
            android:gravity="center_horizontal"
            android:text="@string/message_empty_scenario_list"
            app:layout_constraintBottom_toTopOf="@id/condition_btngroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/empty_lottie_view" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/condition_btngroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/empty_create_button"
                style="@style/AppTheme.Widget.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_large"
                android:layout_marginBottom="@dimen/margin_vertical_large"
                android:text="@string/button_text_create_scenario"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:ignore="MissingConstraints" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/empty_def_button"
                style="@style/AppTheme.Widget.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_horizontal_large"
                android:layout_marginBottom="@dimen/margin_vertical_large"
                android:text="@string/button_onekey_create_scenario"
                app:backgroundTint="#00FFFF"
                android:visibility="gone"
                app:layout_constraintRight_toRightOf="parent"
                tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/item_smart_scenario"
        tools:visibility="gone" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading"
        style="@style/AppTheme.Widget.CircularProgressIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add"
        style="@style/AppTheme.Widget.Fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_horizontal_default"
        android:contentDescription="@string/content_desc_add_scenario"
        android:tint="@color/textTitle"
        android:visibility="gone"
        app:layout_anchor="@id/list"
        app:layout_anchorGravity="bottom|right|end"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
        app:srcCompat="@drawable/ic_add"
        tools:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/openOver"
        style="@style/AppTheme.Widget.Fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_horizontal_default"
        android:contentDescription="开启悬浮"
        android:tint="@color/textTitle"
        android:visibility="gone"
        app:layout_anchor="@id/list"
        app:layout_anchorGravity="bottom|right|end"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
        app:srcCompat="@drawable/ic_play_arrow"
        tools:visibility="gone" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>